<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_preferences_home"
            android:title="@string/title_overview" />

        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_preferences_nav_graph"
            android:title="@string/title_graph" />

        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_preferences_table"
            android:title="@string/title_table" />

        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_preferences_statistics"
            android:title="@string/title_statistics" />
    </group>
    </menu>