<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.openscale.MainActivity" >

    <item
        android:id="@+id/action_bluetooth_status"
        android:icon="@drawable/ic_bluetooth_disabled"
        android:title="@string/action_bluetooth_status"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_measurement"
        android:icon="@drawable/ic_add"
        android:title="+"
        app:showAsAction="always" />

    <item
        android:id="@+id/importData"
        android:title="@string/label_import"
        app:showAsAction="never"/>

    <item
        android:id="@+id/exportData"
        android:title="@string/label_export"
        app:showAsAction="never"/>

    <item
        android:id="@+id/shareData"
        android:title="@string/label_share"
        app:showAsAction="never"/>

</menu>
