...
        android:title="@string/label_delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="#A40000"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/saveButton"
        android:title="@string/save"
        android:icon="@drawable/ic_save"
        android:iconTint="#FFFFFF"
        app:showAsAction="always" />

</menu>
...
